# xllm

./: .gitmodules  CLAUDE.md  CMakeLists.txt  MANIFEST.in  README.md  README.zh-CN.md  pyproject.toml  setup.py
tests/: CMakeLists.txt
tests/api_service/: sample_service_impl_test.cpp
tests/core/common/: rate_limiter_test.cpp
tests/core/distributed_runtime/: vlm_master_test.cpp
tests/core/framework/: hf_model_loader_test.cpp
tests/core/runtime/: cuda_graph_executor_test.cpp  mlu_graph_executor_test.cpp  spec_input_builder_test.cpp
tests/core/scheduler/: chunked_prefill_scheduler_test.cpp  continuous_scheduler_test.cpp  fixed_steps_scheduler_test.cpp
tests/core/util/: blocking_counter_test.cpp  suffix_decoding_cache_test.cpp  threadpool_test.cpp
tests/function_call/: deepseekv32_detector_test.cpp  deepseekv3_detector_test.cpp  glm45_detector_test.cpp  glm47_detector_test.cpp  kimik2_detector_test.cpp  qwen25_detector_test.cpp  qwen3_coder_detector_test.cpp
tests/function_call/partial_json_parser/: test_examples.cpp  test_property_based.cpp
xllm/: CMakeLists.txt  launch_server.py  xllm.cpp
xllm/api_service/: anthropic_service_impl.cpp  chat_service_impl.cpp  completion_service_impl.cpp  mm_service_utils.h  rec_completion_service_impl.cpp  stream_call.h  utils.h
xllm/c_api/: types.h
xllm/c_api/examples/: test_press_rec_multimodal_completions.cpp  test_query_llm_chat_completions.cpp  test_query_llm_completions.cpp  test_query_rec_completions.cpp  test_query_rec_multimodal_completions.cpp
xllm/c_api/internal/: helper.cpp  llm.cpp  rec.cpp
xllm/c_api/test/: utils.cpp  xllm_test.cpp
xllm/cc_api/: internal.h  types.h
xllm/config/: config.h
xllm/config/qwen3/: config.json
xllm/configs/: qwen3.json
xllm/core/common/: CMakeLists.txt  etcd_client.cpp  etcd_client.h  flashinfer_workspace.cpp  global_flags.cpp  global_flags.h  health_check_manager.h  message.h  options.cpp  options.h  version_singleton.h
xllm/core/distributed_runtime/: CMakeLists.txt  collective_service.cpp  collective_service.h  disagg_pd_service_impl.cpp  dist_manager.cpp  dist_manager.h  dit_engine.cpp  engine.h  llm_engine.cpp  llm_master.cpp  llm_master.h  master.cpp  rec_engine.cpp  rec_master.cpp  rec_master.h  remote_worker.cpp  remote_worker.h  shm_channel.cpp  (+9 more)
xllm/function_call/: CMakeLists.txt  base_format_detector.cpp  deepseekv32_detector.cpp  deepseekv3_detector.cpp  kimik2_detector.cpp
xllm/models/: model_registry.cpp  model_registry.h  models.h
xllm/processors/: CMakeLists.txt  clip_image_processor.cpp  clip_image_processor.h  glm4v_image_processor.cpp  glm4v_image_processor.h  glm4v_input_processor.cpp  glm4v_input_processor.h  image_processor.cpp  image_processor.h  input_processor.h  minicpmv_image_processor.cpp  minicpmv_image_processor.h  minicpmv_input_processor.cpp  minicpmv_input_processor.h  qwen2_vl_image_processor.cpp  qwen2_vl_image_processor.h  qwen2_vl_input_processor.cpp  qwen2_vl_input_processor.h  qwen3_vl_image_processor.h  qwen3_vl_input_processor.cpp  qwen3_vl_input_processor.h
xllm/proto/: common.proto  page_manager.proto  worker.proto
xllm/pybind/: CMakeLists.txt  bind.cpp  llm.py
xllm/server/: xllm_server.cpp  xllm_server.h
(+596 files in other folders)
