include(cc_library)

add_subdirectory(tests)
add_subdirectory(attention)

cc_library(
  NAME
    common_layers
  HDRS
    deepseek_v2_attention.h
    qwen3_attention.h
    fuse_norm.h
    rotary_embedding.h
    fused_moe.h
    dense_mlp.h
    qwen3_decoder_layer.h
    qwen3_moe_decoder_layer.h
    linear_impl.h
    linear.h
    word_embedding_impl.h
    layer_utils.h
    indexer.h
  SRCS
    deepseek_v2_attention.cpp
    qwen3_attention.cpp
    fuse_norm.cpp
    rotary_embedding.cpp
    fused_moe.cpp
    dense_mlp.cpp
    qwen3_decoder_layer.cpp
    qwen3_moe_decoder_layer.cpp
    linear_impl.cpp
    layer_utils.cpp
    indexer.cpp
  DEPS
    "-Wl,--whole-archive"
    "-Wl,--no-whole-archive"
    :attention
    :prefix_cache
    :block
    :parallel_state
    :state_dict
    gflags::gflags
    :platform
)